# taskforge

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  NOTICE  README.md  README_zh.md  SECURITY.md  app.py  config.py  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml  desktop-build.yml
docs/: architecture.md  quickstart.md
docs/getting-started/: installation.md
examples/scenes/: finance_report_demo.py
examples/templates/: content_calendar.yaml  customer_followup.yaml  finance_report.yaml  meeting_summary.yaml  weekly_review.yaml
src/: exceptions.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  lib_tests.rs  main.rs
src-tauri/src/sidecar/: taskforge-backend.spec
src/engine/agent/: __init__.py  _base.py  _cache_safe_params.py  _defs.py  _evolution_api.py  _evolution_engine.py  _evolution_models.py  _flow_engine.py  _flow_nodes.py  _pipeline_helpers.py  _prompts.py  _role_definitions.py  _role_reminders.py  _roles_agency.py  _roles_codecorps.py  _roles_core.py  _sandbox_filter.py  _sub_agent_helpers.py  agent_config.py  agent_config_loader.py  agent_dispatcher.py  agent_template.py  background_review.py  boss_decision_agent.py  builtin_templates.py  chat_dispatch.py  denial_tracker.py  department.py  developer_agent.py  dynamic_tools.py  evolution.py  flow.py  fork_orchestrator.py  fork_subagent.py  guardrails.py  hard_limits.py  hard_limits.yaml  intent_engine.py  matcher.py  message_router.py  (+24 more)
src/engine/agent/a2a/: __init__.py  agent_card.py  signing.py  states.py  task_lifecycle.py  transitions.py
src/engine/agent/output/: __init__.py  adapter.py  router.py  store.py
src/engine/llm/: __init__.py  _local_provider.py  _router_core.py
src/engine/template_market/: __init__.py  activator.py  manager.py  models.py  seed.py
src/engine/workflow/: __init__.py  _step_ops_agent.py  _step_ops_simple.py  api.py  auto_output.py  condition_evaluator.py  condition_templates.py  creation.py  dag_utils.py  deadline_scheduler.py  dsl.py  edge_templates.py  engine.py  event_store.py  execution.py  execution_tracer.py  executor.py  graph_compiler.py  idempotency.py  models.py  nl_to_dag.py  node_compat.py  node_state_machine.py  phase_ops.py  step_executors.py  step_ops.py  step_prompts.py  step_tester.py  template_builder.py  template_library.py  variable_pool.py  versioning.py
src/engine/workflow/executors/: __init__.py  ai_executor.py  code_executor.py  data_transform_executor.py  event_executor.py  http_executor.py  loop_executor.py  schedule_executor.py  subflow_executor.py
src/infra/: async_utils.py  remote_stubs.py  secure_storage.py
src/infra/auth/: __init__.py  auth.py  login_logger.py  login_security.py
src/infra/config/: .gitkeep  __init__.py  _constants.py  auth.py  billing.py  bridge.py  browser.py  butler.py  channel.py  code_execution.py  contract.py  credential_pool.py  database.py  delegate.py  desktop.py  gateway.py  llm.py  memory.py  payment.py  persistence.py  redis.py  remote.py  security.py  server.py  settings.py  social.py  task.py  terminal.py  upload.py  watermark.py  ws.py
src/infra/database/: __init__.py  base_manager.py  connection.py  dialect.py  sql_safe.py
src/infra/startup/: app_factory.py  welcome.py
tests/unit/: test_app_factory.py  test_local_provider.py  test_remote_stubs.py  test_router_core_stub.py
web/: .env.example  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/src/: index.css  main.tsx
web/src/app/: router.tsx
web/src/lib/: api-types.ts  api.ts  i18n.ts  tauri-adapter.ts  tauri-event-mock.ts  tauri-mock.ts
web/src/lib/locales/: en.json  zh-CN.json
web/src/services/: auth.ts
web/src/stores/: auth.ts  theme.ts
(+3 files in other folders)
