[project]
name = "taskforge"
version = "0.1.0"
description = "TaskForge - AI Agent OS for Solo Entrepreneurs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BSL-1.1" }
authors = [
    { name = "TaskForge Team", email = "dev@taskforge.local" },
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Operating System :: OS Independent",
    "License :: Other/Proprietary License",
]

dependencies = [
    # Web framework
    "fastapi>=0.115.2",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.31",
    "starlette>=0.40.0",
    # Config
    "pydantic>=2.5.0",
    "pydantic-settings>=2.2.0",
    "jsonschema>=4.20.0",
    "python-dotenv>=1.0.0",
    # Logging
    "structlog>=24.0.0",
    # HTTP (LLM calls)
    "httpx>=0.27.0",
    # Auth
    "pyjwt>=2.13.0",
    # Template
    "pyyaml>=6.0.0",
    "jinja2>=3.1.0",
    # Database migration
    "alembic>=1.13.0",
    # ORM
    "sqlalchemy>=2.0,<2.1",
    # Rate limiting
    "slowapi>=0.1.9",
    # Cache / Redis
    "redis>=5.0.0",
    # Retry / resilience
    "tenacity>=8.2.0",
    # Deliverable rendering
    "docxtpl>=0.18.0",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://cloud.taskos.online"
Repository = "https://github.com/caihu0916/taskforge"
Documentation = "https://github.com/caihu0916/taskforge/tree/main/docs"
Issues = "https://github.com/caihu0916/taskforge/issues"

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
